// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdhocStaticTestView render handles content & guidance 1`] = `
<DocumentFragment>
  <mock-staticcontentdetailsview
    content="stub-content"
    deps="stub-deps"
    guidance="stub-guidance"
    stepstext="Step 0 of 3"
    title="test title"
    togglelabel="test toggle label"
    visualizationenabled="true"
  />
</DocumentFragment>
`;

exports[`AdhocStaticTestView render handles content & no guidance 1`] = `
<DocumentFragment>
  <mock-staticcontentdetailsview
    content="stub-content"
    deps="stub-deps"
    stepstext="Step 0 of 3"
    title="test title"
    togglelabel="test toggle label"
    visualizationenabled="true"
  />
</DocumentFragment>
`;

exports[`AdhocStaticTestView render handles no content & guidance 1`] = `
<DocumentFragment>
  <mock-staticcontentdetailsview
    deps="stub-deps"
    guidance="stub-guidance"
    stepstext="Step 0 of 3"
    title="test title"
    togglelabel="test toggle label"
    visualizationenabled="true"
  />
</DocumentFragment>
`;

exports[`AdhocStaticTestView render handles no content & no guidance 1`] = `
<DocumentFragment>
  <mock-staticcontentdetailsview
    deps="stub-deps"
    stepstext="Step 0 of 3"
    title="test title"
    togglelabel="test toggle label"
    visualizationenabled="true"
  />
</DocumentFragment>
`;

exports[`AdhocStaticTestView should return target page changed view as tab is changed 1`] = `
<DocumentFragment>
  <mock-targetpagechangedview
    displayabledata="[object Object]"
    visualizationtype="-1"
  />
</DocumentFragment>
`;
